# AIDataViz

./: .eslintrc.js  .gitignore  .prettierrc  ARCHITECTURE.md  CODE_STANDARDS.md  DATABASE_STANDARDS.md  FASTAPI_STANDARDS.md  REACT_COMPONENT_STANDARDS.md  README.md  RELEASE_v1.0.0.md  architecture_diagram.mmd  pyproject.toml  release_notes.md
MapData/: AMBIGUITY_DETECTION_SUMMARY.md  ANALYTICAL_FILTERS_IMPLEMENTATION.md  REFACTORING.md
MapData/backend/: .env  DATA_INGESTION_SUMMARY.md  NEON_INTEGRATION.md  README.md  app.py  check_db.py  check_schema.py  config.py  create_counties_table.py  create_spatial_indexes.py  database.py  download_geo_data.py  enable_postgis.py  env.example  examine_geojson.py  ingest_all_counties.py  ingest_all_data.py  ingest_all_states.py  ingest_counties.py  ingest_geographic_data.py  init_db.py  requirements.txt  setup_db.py  setup_env.sh  test_api.py  update_states_schema.py
MapData/backend/models/: base.py  geographic.py
MapData/backend/routes/: geographic.py
MapData/backend/schemas/: geographic.py
MapData/backend/services/: __init__.py  database_service.py
MapData/backend/utils/: __init__.py  geo_utils.py
MapData/frontend/: MULTI_COLOR_HIGHLIGHTING.md  NOT_LOGIC_FUNCTIONALITY.md  README.md  api-test.html  package-lock.json  package.json  test-advanced-analytical.js  test-analytical-filters.js  test-analytical-parsing.js  test-api.js  test-comparison-direct.js  test-comparison.js  test-edge-cases.js  test-multiple-highlighting.js  test-registry.js  test-statistics.js
MapData/frontend/public/: api-test.html  index.html
MapData/frontend/src/: App.js  index.js  test-api.js
MapData/frontend/src/components/: ControlPanel.js  CountyLayers.js  MapComponent.js  MapStyles.css  StateLayers.js
MapData/frontend/src/components/old_map_components/: MapControls.js  MapEventHandlers.js  (+4 more)
MapData/frontend/src/data/: AlaskaTransformation.md  HawaiiTransformation.md  alaskaTransformDemo.js  apiService.js  geoUtils.js  hawaiiTransformDemo.js  testHawaiiTransform.js
MapData/frontend/src/utils/: analyticalFunctionRegistry.js  colorUtils.js  mockLLM.js  statisticsUtils.js
(+5 files in other folders)
