[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=MapData/backend --cov-report=term-missing --cov-report=xml:coverage.xml"
testpaths = ["tests"]

[tool.coverage.run]
source = ["MapData/backend"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError",
]

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
max-complexity = 10
select = "C,E,F,W,B,B950"
exclude = [
    ".git",
    "__pycache__",
    "dist",
    "build",
    ".eggs",
    ".tox",
    ".venv",
    "venv",
]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name",
]

[tool.pylint.format]
max-line-length = 88

[tool.pylint.design]
max-args = 5
max-attributes = 10
max-bool-expr = 5
max-branches = 12
max-locals = 15
max-parents = 7
max-public-methods = 20
max-returns = 6
max-statements = 50
min-public-methods = 1

[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101"] 